crates/oxc_css_parser/tests/error/less/mixin/definition-commas.snap
---
source: crates/oxc_css_parser/tests/error.rs
---
error: component value is expected
  ┌─ definition-commas.less:1:13
  │
1 │ .mixin(@arg,,) {}
  │             ^


